syntax = "proto3";

package hermes;

message Packet {
  string recipient = 1;
  bytes body = 2;
}

message Ack{}

message FetchReq{
  string recipient = 1;
  int32 amount = 2;
  bytes sig = 3;
}

message PacketList {
  repeated Packet inner = 1;
}

message NewUserReq{
  bytes public_key = 1;
}

message NewUserRes {
  string id = 1;
}


// inside sparta 

service UserService{
  rpc CreateUser(NewUserReq) returns (NewUserRes);
}

service MessageService {
  rpc Send(Packet) returns (Ack);
  rpc Fetch(FetchReq) returns (PacketList);
}


// for trojan proxy

service TrojanService {
  rpc Send(Packet) returns (Ack);
  rpc Fetch(FetchReq) returns (PacketList);
  rpc CreateUser(NewUserReq) returns (NewUserRes);
}
